# sprinkle

./: LICENSE  README.md  inference.py  main.py  pyproject.toml  tui.py  utils.py
.github/workflows/: python-publish.yml
sprinkle/: __init__.py  main.py  parsing.py  tui.py
