[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sprinkle-ai"
version = "0.1.0"
description = "AI-powered bash command generator that converts natural language descriptions into executable shell commands"
authors = [{name = "Yair", email = "yair@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
keywords = ["ai", "bash", "cli", "command-line", "natural-language", "automation"]
dependencies = [
    "langchain>=0.3.26",
    "langchain-google-genai>=1.0.0",
    "pydantic>=2.11.7",
    "textual>=5.2.0",
]

[project.scripts]
sprinkle = "sprinkle.main:cli"

[project.urls]
Homepage = "https://github.com/yair/sprinkle"
Repository = "https://github.com/yair/sprinkle"
Issues = "https://github.com/yair/sprinkle/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sprinkle"]

[tool.pyright]
venvPath = "."
venv = ".venv"
